form overflow to fix + unity value not working

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
     border: none;
     background-color: rgba(178, 223, 251, .5);
     cursor: pointer;
+    outline: none;
 
     transition: all 500ms ease;
 }
@@ -50,6 +51,79 @@ header {
 
 .change-city__btn:hover {
     background-color: rgba(178, 223, 251, 1);
+}
+
+.change-city__submit-btn {
+    position: absolute;
+    background: none;
+    font-weight: bold;
+    top: 75%;
+    border: none;
+    width: 35px;
+    height: 30px;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    cursor: pointer;
+    outline: none;
+    background-image:
+        linear-gradient(0deg, #333, #333 25%, transparent 25%, transparent 75%, #333 75%),
+        linear-gradient(90deg, #333, #333 25%, transparent 25%, transparent 75%, #333 75%),
+        linear-gradient(180deg, #333, #333 25%, transparent 25%, transparent 75%, #333 75%),
+        linear-gradient(270deg, #333, #333 25%, transparent 25%, transparent 75%, #333 75%);
+        background-position:  0 0, 0 0, 100% 0, 0 100%;
+    background-size: 2px 100%, 100% 2px, 2px 100%, 100% 2px;
+    background-repeat: no-repeat;
+
+    transition: all 200ms ease-in;
+}
+
+.change-city__submit-btn:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+.fake-parent {
+    position: relative;
+}
+
+.change-city__form {
+    /* position: relative; */
+    top: 13px;
+    height: 100px;
+    margin: 0 auto;
+    width: 200px;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, .7);
+    overflow-y: hidden;
+    
+    transition: all 250ms ease-in;
+}
+
+.box-arrow {
+    /* content: ''; */
+    position: absolute;
+    top: -13px;
+    left: 50%;
+    overflow: visible;
+    transform: translateX(-50%);
+    display : inline-block;
+    border-right : 13px solid transparent;
+    border-bottom : 13px solid rgba(255, 255, 255, .7);;
+    border-left : 13px solid transparent;
+}
+
+.change-city__input {
+    border: none;
+    background-color: transparent;
+    font-size: 1rem;
+    border-bottom: 2px solid grey;
+    width: 150px;
+    position: relative;
+    line-height: 1.6rem;
+    top: 1.1rem;
+    outline: none;
+    font-style: italic;
+    text-align: center;
 }
 
 .container {
@@ -85,8 +159,10 @@ header {
 }
 
 .weather__icon {
-    width: 100%;
-    margin-bottom: -2rem;
+    width: 80%;
+    margin: auto;
+    position: relative;
+    top: 1rem;
 }
 
 .weather__description {
